--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -68,6 +69,7 @@
             color: var(--primary-color);
         }
 
+        /* Splash screen styles */
         .loading-screen {
             position: fixed;
             inset: 0;
@@ -98,7 +100,28 @@
         }
 
         @keyframes spin {
-            to { transform: rotate(360deg); }
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        .splash-logo {
+            width: 160px;
+            height: auto;
+            margin-bottom: 20px;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: scale(0.95);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
 
         .button {
@@ -137,9 +160,11 @@
             body {
                 padding: 20px 10px;
             }
+
             h1 {
                 font-size: 1.8rem;
             }
+
             .button {
                 width: 90%;
                 font-size: 1rem;
@@ -147,11 +172,18 @@
         }
     </style>
 </head>
+
 <body>
+
+    <!-- Splash Screen -->
     <div class="loading-screen" id="loading-screen">
-        <div class="spinner"></div>
+        <div class="splash-content">
+            <img src="icons/splash-logo.png" alt="Country Inns Logo" class="splash-logo">
+            <div class="spinner"></div>
+        </div>
     </div>
 
+    <!-- Main Content -->
     <h1>Welcome to the Country Inns App</h1>
     <button id="dark-mode-toggle" class="button">🌙 Toggle Dark Mode</button>
     <button id="open-site" class="button">🌐 Open Web Version</button>
@@ -164,7 +196,7 @@
             window.location.href = appURL;
         }
 
-        window.addEventListener("load", function() {
+        window.addEventListener("load", function () {
             setTimeout(() => {
                 document.getElementById("loading-screen").classList.add("fade-out");
             }, 2000);
@@ -176,13 +208,13 @@
             darkModeToggle.textContent = "☀️ Light Mode";
         }
 
-        darkModeToggle.addEventListener("click", function() {
+        darkModeToggle.addEventListener("click", function () {
             document.body.classList.toggle("dark-mode");
             darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
             localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
         });
 
-        document.getElementById("open-site").addEventListener("click", function() {
+        document.getElementById("open-site").addEventListener("click", function () {
             window.location.href = appURL;
         });
 
@@ -204,4 +236,5 @@
         });
     </script>
 </body>
+
 </html>
