--- a/index.html
+++ b/index.html
@@ -1,240 +1,254 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Country Inns App</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Country Inns App</title>
 
-    <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.webmanifest" type="application/manifest+json">
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="manifest.webmanifest" type="application/manifest+json" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-    <!-- Theme -->
-    <meta name="theme-color" content="#000000">
+  <!-- Theme -->
+  <meta name="theme-color" content="#000000" />
 
-    <!-- Google Fonts: Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Google Fonts: Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
 
-    <!-- App Styles -->
-    <style>
-        :root {
-            --primary-color: #d4af37;
-            --secondary-color: #333;
-            --accent-color: #0056b3;
-            --background-light: #f9f9f9;
-            --background-dark: #121212;
-            --text-light: #333;
-            --text-dark: #eee;
-            --button-bg: var(--primary-color);
-            --button-hover: #c0982b;
-            --transition-speed: 0.3s;
-            --border-radius: 12px;
-        }
+  <style>
+    :root {
+      --primary-color: #d4af37;
+      --secondary-color: #333;
+      --accent-color: #0056b3;
+      --background-light: #f9f9f9;
+      --background-dark: #121212;
+      --text-light: #333;
+      --text-dark: #eee;
+      --button-bg: var(--primary-color);
+      --button-hover: #c0982b;
+      --transition-speed: 0.3s;
+      --border-radius: 12px;
+    }
 
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-        body {
-            font-family: 'Poppins', 'Arial', sans-serif;
-            text-align: center;
-            min-height: 100vh;
-            padding: 30px 20px;
-            background-color: var(--background-light);
-            color: var(--text-light);
-            transition: background-color var(--transition-speed), color var(--transition-speed);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
+    body {
+      font-family: 'Poppins', 'Arial', sans-serif;
+      text-align: center;
+      min-height: 100vh;
+      padding: 30px 20px;
+      background-color: var(--background-light);
+      color: var(--text-light);
+      transition: background-color var(--transition-speed), color var(--transition-speed);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
 
-        h1 {
-            font-size: 2.2rem;
-            margin-bottom: 20px;
-            color: var(--primary-color);
-        }
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 20px;
+      color: var(--primary-color);
+    }
 
-        .dark-mode {
-            background-color: var(--background-dark);
-            color: var(--text-dark);
-        }
+    .dark-mode {
+      background-color: var(--background-dark);
+      color: var(--text-dark);
+    }
 
-        .dark-mode h1 {
-            color: var(--primary-color);
-        }
+    .dark-mode h1 {
+      color: var(--primary-color);
+    }
 
-        /* Splash screen styles */
-        .loading-screen {
-            position: fixed;
-            inset: 0;
-            background: var(--background-light);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-            transition: opacity var(--transition-speed);
-        }
+    .loading-screen {
+      position: fixed;
+      inset: 0;
+      background: var(--background-light);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      transition: opacity var(--transition-speed);
+    }
 
-        .dark-mode .loading-screen {
-            background: var(--background-dark);
-        }
+    .dark-mode .loading-screen {
+      background: var(--background-dark);
+    }
 
-        .loading-screen.fade-out {
-            opacity: 0;
-            pointer-events: none;
-        }
+    .loading-screen.fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
 
-        .spinner {
-            width: 60px;
-            height: 60px;
-            border: 6px solid rgba(0,0,0,0.1);
-            border-top: 6px solid var(--primary-color);
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-        }
+    .spinner {
+      width: 60px;
+      height: 60px;
+      border: 6px solid rgba(0, 0, 0, 0.1);
+      border-top: 6px solid var(--primary-color);
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
 
-        @keyframes spin {
-            to {
-                transform: rotate(360deg);
-            }
-        }
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
 
-        .splash-logo {
-            width: 160px;
-            height: auto;
-            margin-bottom: 20px;
-            animation: fadeIn 1s ease-in-out;
-        }
+    .button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      padding: 14px 24px;
+      margin: 10px;
+      font-size: 1rem;
+      font-weight: 600;
+      color: #fff;
+      background-color: var(--button-bg);
+      border: none;
+      border-radius: var(--border-radius);
+      cursor: pointer;
+      text-decoration: none;
+      transition: background-color var(--transition-speed), transform 0.2s, box-shadow 0.2s;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: scale(0.95);
-            }
+    .button:hover {
+      background-color: var(--button-hover);
+      transform: translateY(-2px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    }
 
-            to {
-                opacity: 1;
-                transform: scale(1);
-            }
-        }
+    .button:active {
+      transform: scale(0.96);
+      opacity: 0.9;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    }
 
-        .button {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            padding: 14px 24px;
-            margin: 10px;
-            font-size: 1rem;
-            font-weight: 600;
-            color: #fff;
-            background-color: var(--button-bg);
-            border: none;
-            border-radius: var(--border-radius);
-            cursor: pointer;
-            text-decoration: none;
-            transition: background-color var(--transition-speed), transform var(--transition-speed);
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
+    .button:focus-visible {
+      outline: 3px solid var(--accent-color);
+      outline-offset: 4px;
+    }
 
-        .button:hover {
-            background-color: var(--button-hover);
-            transform: translateY(-2px);
-        }
+    .dark-mode .button {
+      background-color: var(--primary-color);
+      color: #121212;
+    }
 
-        .dark-mode .button {
-            background-color: var(--primary-color);
-            color: #121212;
-        }
+    .button .icon {
+      margin-right: 8px;
+    }
 
-        .button .icon {
-            margin-right: 8px;
-        }
+    .button.clicked {
+      animation: flash 0.3s;
+    }
 
-        @media (max-width: 600px) {
-            body {
-                padding: 20px 10px;
-            }
+    @keyframes flash {
+      0% {
+        background-color: var(--button-hover);
+      }
+      100% {
+        background-color: var(--button-bg);
+      }
+    }
 
-            h1 {
-                font-size: 1.8rem;
-            }
+    a {
+      color: var(--accent-color);
+      text-decoration: none;
+      transition: color 0.2s, text-shadow 0.2s;
+    }
 
-            .button {
-                width: 90%;
-                font-size: 1rem;
-            }
-        }
-    </style>
+    a:hover {
+      color: var(--primary-color);
+      text-shadow: 0 0 4px rgba(0, 86, 179, 0.4);
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 20px 10px;
+      }
+
+      h1 {
+        font-size: 1.8rem;
+      }
+
+      .button {
+        width: 90%;
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
-
 <body>
+  <div class="loading-screen" id="loading-screen">
+    <div class="spinner"></div>
+  </div>
 
-    <!-- Splash Screen -->
-    <div class="loading-screen" id="loading-screen">
-        <div class="splash-content">
-            <img src="icons/splash-logo.png" alt="Country Inns Logo" class="splash-logo">
-            <div class="spinner"></div>
-        </div>
-    </div>
+  <h1>Welcome to the Country Inns App</h1>
+  <button id="dark-mode-toggle" class="button">🌙 Toggle Dark Mode</button>
+  <button id="open-site" class="button">🌐 Open Web Version</button>
+  <button id="install-button" class="button" style="display: none;">📲 Install App</button>
 
-    <!-- Main Content -->
-    <h1>Welcome to the Country Inns App</h1>
-    <button id="dark-mode-toggle" class="button">🌙 Toggle Dark Mode</button>
-    <button id="open-site" class="button">🌐 Open Web Version</button>
-    <button id="install-button" class="button" style="display:none;">📲 Install App</button>
+  <script>
+    const appURL = "https://sites.google.com/view/countryinnsnewforest";
 
-    <script>
-        const appURL = "https://sites.google.com/view/countryinnsnewforest";
+    if (window.matchMedia('(display-mode: standalone)').matches || navigator.standalone) {
+      window.location.href = appURL;
+    }
 
-        if (window.matchMedia('(display-mode: standalone)').matches || navigator.standalone) {
-            window.location.href = appURL;
-        }
+    window.addEventListener("load", function () {
+      setTimeout(() => {
+        document.getElementById("loading-screen").classList.add("fade-out");
+      }, 2000);
+    });
 
-        window.addEventListener("load", function () {
-            setTimeout(() => {
-                document.getElementById("loading-screen").classList.add("fade-out");
-            }, 2000);
+    const darkModeToggle = document.getElementById("dark-mode-toggle");
+    if (localStorage.getItem("dark-mode") === "enabled") {
+      document.body.classList.add("dark-mode");
+      darkModeToggle.textContent = "☀️ Light Mode";
+    }
+
+    darkModeToggle.addEventListener("click", function () {
+      document.body.classList.toggle("dark-mode");
+      darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
+      localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
+    });
+
+    document.getElementById("open-site").addEventListener("click", function () {
+      window.location.href = appURL;
+    });
+
+    let deferredPrompt;
+    window.addEventListener("beforeinstallprompt", (event) => {
+      event.preventDefault();
+      deferredPrompt = event;
+      document.getElementById("install-button").style.display = "block";
+    });
+
+    document.getElementById("install-button").addEventListener("click", () => {
+      if (deferredPrompt) {
+        deferredPrompt.prompt();
+        deferredPrompt.userChoice.then(() => {
+          deferredPrompt = null;
+          document.getElementById("install-button").style.display = "none";
         });
+      }
+    });
 
-        const darkModeToggle = document.getElementById("dark-mode-toggle");
-        if (localStorage.getItem("dark-mode") === "enabled") {
-            document.body.classList.add("dark-mode");
-            darkModeToggle.textContent = "☀️ Light Mode";
-        }
-
-        darkModeToggle.addEventListener("click", function () {
-            document.body.classList.toggle("dark-mode");
-            darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
-            localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
-        });
-
-        document.getElementById("open-site").addEventListener("click", function () {
-            window.location.href = appURL;
-        });
-
-        let deferredPrompt;
-        window.addEventListener("beforeinstallprompt", (event) => {
-            event.preventDefault();
-            deferredPrompt = event;
-            document.getElementById("install-button").style.display = "block";
-        });
-
-        document.getElementById("install-button").addEventListener("click", () => {
-            if (deferredPrompt) {
-                deferredPrompt.prompt();
-                deferredPrompt.userChoice.then(() => {
-                    deferredPrompt = null;
-                    document.getElementById("install-button").style.display = "none";
-                });
-            }
-        });
-    </script>
+    // Add "clicked" animation to buttons
+    document.querySelectorAll('.button').forEach(btn => {
+      btn.addEventListener('click', () => {
+        btn.classList.add('clicked');
+        setTimeout(() => btn.classList.remove('clicked'), 300);
+      });
+    });
+  </script>
 </body>
-
 </html>
