--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Country Inns App</title>
 
   <!-- PWA Manifest -->
-  <link rel="manifest" href="manifest.webmanifest" type="application/manifest+json" />
+  <link rel="manifest" href="manifest.webmanifest" type="application/manifest+json">
 
   <!-- Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- Theme -->
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#000000">
 
   <!-- Google Fonts: Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -90,16 +90,14 @@
     .spinner {
       width: 60px;
       height: 60px;
-      border: 6px solid rgba(0, 0, 0, 0.1);
+      border: 6px solid rgba(0,0,0,0.1);
       border-top: 6px solid var(--primary-color);
       border-radius: 50%;
       animation: spin 1s linear infinite;
     }
 
     @keyframes spin {
-      to {
-        transform: rotate(360deg);
-      }
+      to { transform: rotate(360deg); }
     }
 
     .button {
@@ -116,25 +114,13 @@
       border-radius: var(--border-radius);
       cursor: pointer;
       text-decoration: none;
-      transition: background-color var(--transition-speed), transform 0.2s, box-shadow 0.2s;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: background-color var(--transition-speed), transform var(--transition-speed);
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
     .button:hover {
       background-color: var(--button-hover);
       transform: translateY(-2px);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-    }
-
-    .button:active {
-      transform: scale(0.96);
-      opacity: 0.9;
-      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-    }
-
-    .button:focus-visible {
-      outline: 3px solid var(--accent-color);
-      outline-offset: 4px;
     }
 
     .dark-mode .button {
@@ -146,39 +132,19 @@
       margin-right: 8px;
     }
 
-    .button.clicked {
-      animation: flash 0.3s;
-    }
-
-    @keyframes flash {
-      0% {
-        background-color: var(--button-hover);
-      }
-      100% {
-        background-color: var(--button-bg);
-      }
-    }
-
-    a {
+    #location-status {
+      margin-top: 10px;
+      font-size: 0.95rem;
       color: var(--accent-color);
-      text-decoration: none;
-      transition: color 0.2s, text-shadow 0.2s;
-    }
-
-    a:hover {
-      color: var(--primary-color);
-      text-shadow: 0 0 4px rgba(0, 86, 179, 0.4);
     }
 
     @media (max-width: 600px) {
       body {
         padding: 20px 10px;
       }
-
       h1 {
         font-size: 1.8rem;
       }
-
       .button {
         width: 90%;
         font-size: 1rem;
@@ -188,13 +154,18 @@
 </head>
 <body>
   <div class="loading-screen" id="loading-screen">
-    <div class="spinner"></div>
+    <div class="splash-content">
+      <img src="icons/splash-logo.png" alt="Country Inns Logo" class="splash-logo">
+      <div class="spinner"></div>
+    </div>
   </div>
 
   <h1>Welcome to the Country Inns App</h1>
   <button id="dark-mode-toggle" class="button">🌙 Toggle Dark Mode</button>
   <button id="open-site" class="button">🌐 Open Web Version</button>
-  <button id="install-button" class="button" style="display: none;">📲 Install App</button>
+  <button id="install-button" class="button" style="display:none;">📲 Install App</button>
+  <button id="find-pub" class="button">📍 Find Nearest Pub</button>
+  <div id="location-status"></div>
 
   <script>
     const appURL = "https://sites.google.com/view/countryinnsnewforest";
@@ -203,7 +174,7 @@
       window.location.href = appURL;
     }
 
-    window.addEventListener("load", function () {
+    window.addEventListener("load", function() {
       setTimeout(() => {
         document.getElementById("loading-screen").classList.add("fade-out");
       }, 2000);
@@ -215,13 +186,13 @@
       darkModeToggle.textContent = "☀️ Light Mode";
     }
 
-    darkModeToggle.addEventListener("click", function () {
+    darkModeToggle.addEventListener("click", function() {
       document.body.classList.toggle("dark-mode");
       darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
       localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
     });
 
-    document.getElementById("open-site").addEventListener("click", function () {
+    document.getElementById("open-site").addEventListener("click", function() {
       window.location.href = appURL;
     });
 
@@ -242,12 +213,29 @@
       }
     });
 
-    // Add "clicked" animation to buttons
-    document.querySelectorAll('.button').forEach(btn => {
-      btn.addEventListener('click', () => {
-        btn.classList.add('clicked');
-        setTimeout(() => btn.classList.remove('clicked'), 300);
-      });
+    // 📍 Find Nearest Pub Feature
+    document.getElementById("find-pub").addEventListener("click", function () {
+      const status = document.getElementById("location-status");
+      status.textContent = "Getting your location...";
+
+      if ("geolocation" in navigator) {
+        navigator.geolocation.getCurrentPosition(
+          (position) => {
+            const lat = position.coords.latitude;
+            const lon = position.coords.longitude;
+            const query = encodeURIComponent("Country Inns pub");
+            const mapsUrl = `https://www.google.com/maps/search/${query}/@${lat},${lon},14z`;
+            status.textContent = "Opening Google Maps...";
+            window.open(mapsUrl, "_blank");
+            setTimeout(() => { status.textContent = ""; }, 3000);
+          },
+          (error) => {
+            status.textContent = "Unable to get your location. Please allow location access.";
+          }
+        );
+      } else {
+        status.textContent = "Geolocation is not supported by your browser.";
+      }
     });
   </script>
 </body>
