--- a/lambinn.html
+++ b/lambinn.html
@@ -25,6 +25,11 @@
       color: #e6d8b5;
     }
 
+    .logo {
+      margin: 1rem auto;
+      max-width: 140px;
+    }
+
     .hero {
       position: relative;
       width: 100%;
@@ -38,11 +43,16 @@
       margin: auto;
     }
 
+    h2 {
+      color: #e6d8b5;
+      margin-top: 2rem;
+    }
+
     .buttons {
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      margin-top: 2rem;
+      margin-top: 1rem;
     }
 
     .buttons a {
@@ -71,6 +81,7 @@
 <body>
   <header>
     <h1>The Lamb Inn</h1>
+    <img src="images/lambinn-logo.png" alt="The Lamb Inn Logo" class="logo">
   </header>
 
   <div class="hero"></div>
@@ -78,11 +89,25 @@
   <div class="content">
     <p>Welcome to The Lamb Inn, Nomansland — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on.</p>
 
+    <h2>Food Menus</h2>
     <div class="buttons">
-      <a href="menus/lambinn.html">View Menus</a>
+      <a href="menus/lambinn-lunch.html">Lunch Menu</a>
+      <a href="menus/lambinn-dinner.html">Dinner Menu</a>
+      <a href="menus/lambinn-sunday.html">Sunday Roast Menu</a>
+    </div>
+
+    <h2>Drink Menus</h2>
+    <div class="buttons">
+      <a href="menus/lambinn-drinks.html">Drinks Menu</a>
+      <a href="menus/lambinn-wine.html">Wine List</a>
+    </div>
+
+    <h2>Extras</h2>
+    <div class="buttons">
+      <a href="events/lambinn.html">Events</a>
+      <a href="promotions/lambinn.html">Promotions</a>
+      <a href="social/lambinn.html">Social Media</a>
       <a href="https://www.thelambnomansland.co.uk/">Official Website</a>
-      <a href="https://www.facebook.com/TheLambNomansland/">Facebook</a>
-      <a href="https://www.instagram.com/">Instagram</a>
       <a href="index.html">⬅ Back to Home</a>
     </div>
   </div>
