--- a/royaloak.html
+++ b/royaloak.html
@@ -113,7 +113,7 @@
   </div>
 
   <footer>
-    © 2025 Country Inns – The Lamb Inn
+    © 2025 Country Inns – The Royal Oak
   </footer>
 </body>
 </html>
