--- a/boldforester.html
+++ b/boldforester.html
@@ -112,7 +112,7 @@
   </div>
 
   <footer>
-    © 2025 Country Inns – The Lamb Inn
+    © 2025 Country Inns – The Bold Forester
   </footer>
 </body>
 </html>
