--- a/boldforester.html
+++ b/boldforester.html
@@ -34,9 +34,7 @@
       position: relative;
       width: 100%;
       height: 220px;
-      background: url("bold-forester-images/Restaurant Images
-/boldforestermain.jpg
-") center/cover no-repeat;
+      background: url("images/lambinn.jpg") center/cover no-repeat;
     }
 
     .content {
