--- a/home.html
+++ b/home.html
@@ -201,7 +201,7 @@
     <span>The Bold Forester</span>
   </a>
   <a class="pub-tile" href="lambinn.html">
-    <img src="https://images.unsplash.com/photo-1565299507177-b0ac66763828?auto=format&fit=crop&w=800&q=80" alt="The Lamb Inn">
+    <img src="Lamb-Inn-images/LambInn.jpg" alt="The Lamb Inn">
     <span>The Lamb Inn</span>
   </a>
   <a class="pub-tile" href="royaloak.html">
