--- a/home.html
+++ b/home.html
@@ -205,7 +205,7 @@
     <span>The Lamb Inn</span>
   </a>
   <a class="pub-tile" href="royaloak.html">
-    <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=800&q=80" alt="The Royal Oak">
+    <img src="Royal-Oak-images/The Royal Oak.jpeg" alt="The Royal Oak">
     <span>The Royal Oak</span>
   </a>
   <a class="pub-tile" href="woolpack.html">
