--- a/boldforester.html
+++ b/boldforester.html
@@ -89,14 +89,14 @@
     <h2>Food Menus</h2>
     <div class="buttons">
       <a href="bold-forester-images/bold-forester-menus/main-menu/NEW-MENU-SPRING-SUMMER-2025.html">Menu</a>
-      <a href="menus/lambinn-sunday.html">Sunday Menu</a>
-      <a href="menus/lambinn-kids-menu.html">Kids Menu</a>
-      <a href="menus/lambinn-desserts-menu.html">Desserts Menu</a>
+      <a href="bold-forester-images/bold-forester-menus/sunday-menu/NEW-SUNDAY-MENU-SPRING-SUMMER-2025.html">Sunday Menu</a>
+      <a href="bold-forester-images/bold-forester-menus/kids-menu/Tiny-Tums-Menu-2025.html">Kids Menu</a>
+      <a href="bold-forester-images/bold-forester-menus/desserts-menu/New-Dessert-Menu-2025.html">Desserts Menu</a>
     </div>
 
     <h2>Drink Menus</h2>
     <div class="buttons">
-      <a href="menus/lambinn-drinks.html">Drinks Menu</a>
+      <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-25th-feb.html">Drinks Menu</a>
       <a href="menus/lambinn-wine.html">Wine List</a>
       <a href="menus/lambinn-cocktail-menu.html">Cocktail Menu</a>
     </div>
