--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     /* Hero Section */
     .hero {
       background: linear-gradient(rgba(46,70,49,0.7), rgba(46,70,49,0.7)),
-                  url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+                  url('2Copy of Stay in the Know, Wherever You Go..png') center/cover no-repeat;
       color: #f8f5e9;
       text-align: center;
       padding: 80px 20px;
