--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     /* Hero Section */
     .hero {
       background: linear-gradient(rgba(46,70,49,0.7), rgba(46,70,49,0.7)),
-                  url('ChatGPT Image Sep 7, 2025, 09_10_11 AM.png') center/cover no-repeat;
+                  url('andy-newton-Od9W1_kbX8s-unsplash.jpg') center/cover no-repeat;
       color: #f8f5e9;
       text-align: center;
       padding: 80px 20px;
