--- a/boldforester.html
+++ b/boldforester.html
@@ -83,9 +83,11 @@
   <img src="The Bold Forester.jpg" alt="The Bold Forester Logo" class="logo">
 </header>
   <div class="hero"></div>
-  <div class="content">
-    <p>Welcome to The Bold Forester, Marchwood — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on.</p>
-
+  <section>
+  <div class="about">
+    <h2>Welcome to The Bold Forester, Marchwood — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on</h2>
+  </div>
+</section>
     <h2>Food Menus</h2>
     <div class="buttons">
       <a href="bold-forester-images/bold-forester-menus/main-menu/NEW-MENU-SPRING-SUMMER-2025.html">Menu</a>
