--- a/boldforester.html
+++ b/boldforester.html
@@ -82,10 +82,9 @@
   <header>
   <img src="The Bold Forester.jpg" alt="The Bold Forester Logo" class="logo">
 </header>
-
   <section>
   <div class="about">
-    <h4>Welcome to The Bold Forester, Marchwood — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on</h4>
+    <p>Welcome to The Bold Forester, Marchwood — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on</p>
   </div>
 </section>
     <h2>Food Menus</h2>
