--- a/home.html
+++ b/home.html
@@ -181,22 +181,55 @@
   
   <!-- Events -->
   <section>
-    <h2>Featured Events & Promotions</h2>
-    <div class="events">
-      <div class="event-card">
-        <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Christmas Feast">
-        <h3>Festive Feast</h3>
-        <p>Book early & save £5 per head on our December feast menu.</p>
-        <button>Add to Calendar</button>
-      </div>
-      <div class="event-card">
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=800&q=80" alt="Sunday Roast">
-        <h3>Sunday Roasts</h3>
-        <p>Join us every Sunday for delicious home-cooked roasts.</p>
-        <button>Add to Calendar</button>
-      </div>
+   <!-- Featured Events & Promotions -->
+<section>
+  <h2>Featured at Every Pub</h2>
+  <div class="events">
+
+    <!-- Festive Feast -->
+    <div class="event-card">
+      <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
+      <h3>Festive Feast</h3>
+      <p>Available 1st–23rd December across all our pubs. Book before 31st October and save £5 per head!</p>
+      <a href="festive-feast.html" class="btn">View Details</a>
+      <button>Add to Calendar</button>
     </div>
-  </section>
+
+    <!-- Sunday Roasts -->
+    <div class="event-card">
+      <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=800&q=80" alt="Sunday Roast">
+      <h3>Sunday Roasts</h3>
+      <p>Every Sunday, enjoy a traditional roast with all the trimmings at any Country Inns pub.</p>
+      <a href="sunday-roast.html" class="btn">See More</a>
+      <button>Add to Calendar</button>
+    </div>
+
+    <!-- Dog Friendly -->
+    <div class="event-card">
+      <img src="https://images.unsplash.com/photo-1558788353-f76d92427f16?auto=format&fit=crop&w=800&q=80" alt="Dog Friendly">
+      <h3>Dog Friendly</h3>
+      <p>All our pubs are dog-friendly — bring your four-legged friends along!</p>
+      <a href="dog-friendly.html" class="btn">Learn More</a>
+    </div>
+
+    <!-- Local Ales & Wines -->
+    <div class="event-card">
+      <img src="https://images.unsplash.com/photo-1586425221220-9ac4c8b8f7f1?auto=format&fit=crop&w=800&q=80" alt="Local Ales">
+      <h3>Local Ales & Fine Wines</h3>
+      <p>Discover our carefully chosen local ales and wines available across all Country Inns pubs.</p>
+      <a href="drinks-selection.html" class="btn">Explore</a>
+    </div>
+
+    <!-- Country Inns Experience -->
+    <div class="event-card">
+      <img src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?auto=format&fit=crop&w=800&q=80" alt="Cosy Pubs">
+      <h3>Country Inns Experience</h3>
+      <p>Cosy pubs, crackling fires, hearty meals, and a warm welcome wherever you visit.</p>
+      <a href="country-inns-experience.html" class="btn">Find Out More</a>
+    </div>
+
+  </div>
+</section>
 
   <!-- Pubs -->
   <section>
